# ChangeLog for xfce-base/xfwm4
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.230 2015/03/08 15:06:39 mgorny Exp $

*xfwm4-4.12.0 (08 Mar 2015)

  08 Mar 2015; Michał Górny <mgorny@gentoo.org> +xfwm4-4.12.0.ebuild:
  Xfce 4.12 version bump, bug #541962. https://github.com/gentoo/gentoo-portage-
  rsync-mirror/pull/63 by me and damex.

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> xfwm4-4.11.2.ebuild:
  add arm64 support, tested on A53 board

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> -xfwm4-4.11.1.ebuild:
  old

*xfwm4-4.11.2 (20 Aug 2014)

  20 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +xfwm4-4.11.2.ebuild:
  Version bump.

  22 Apr 2014; Samuli Suominen <ssuominen@gentoo.org>
  -files/xfwm4-4.10.0-gtk34.patch, -xfwm4-4.10.0-r1.ebuild:
  old

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for sparc, wrt bug #507432

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for alpha, wrt bug #507432

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for ia64, wrt bug #507432

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for ppc64, wrt bug #507432

  14 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for ppc, wrt bug #507432

*xfwm4-4.11.1 (11 Mar 2014)

  11 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> +xfwm4-4.11.1.ebuild:
  Prerelease version bump.

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for x86, wrt bug #496018

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> xfwm4-4.10.1.ebuild:
  amd64 stable, bug 496018

  31 Dec 2013; Markus Meier <maekke@gentoo.org> xfwm4-4.10.1.ebuild:
  arm stable, bug #496018

  27 Dec 2013; Jeroen Roovers <jer@gentoo.org> xfwm4-4.10.1.ebuild:
  Stable for HPPA (bug #496018).

  05 May 2013; Samuli Suominen <ssuominen@gentoo.org> -xfwm4-4.10.0.ebuild: