@@ -4,27 +4,29 @@ Hash: SHA256
 DIST xfwm4-4.10.1.tar.bz2 1093825 SHA256 380c44fba6eb779e34be0fe94f3726cfa131803014d6073c45aec8a1257fa740 SHA512 dad7cdb929b60cdee539dd96e0cc5fb5c71ab13163469b075164b4e54f1b7d72b8e84423aa533d6619902e269bd3d8070dac835729cf22ecbdbecffa36ce4004 WHIRLPOOL 582526f987df98ff3fa5c49e5acbb1e097e4b94fdd0494e6726542879feb3ede8bad34de10c86e343f4daf8b1fd3c8f5b966deb87e6091c3c047ee4994e8828f
 DIST xfwm4-4.11.2.tar.bz2 1047307 SHA256 aae1ed7ef1ae77800343e7c43811ab8ef786a9498efc5c10e8ed28b2eba04779 SHA512 4d4d02fdd03658619a7892fe781027303d7e9a60f65e288d2acdac7ef6b9875053cad1cadccb84a7926710a20e71ca44e9da0141fb853512fcbcccc17321b3a3 WHIRLPOOL 393930e11056f8eef7b86c75d95445622f2e263619d764dc8ff600e51552026e6d56503b4e73dddc5f2748f3da004df53ebcecc4638a0f86ef3c9257b8cd0567
 DIST xfwm4-4.12.0.tar.bz2 1200700 SHA256 29f4cbe2869ae32a6775877ed6bfc4ded7000f013ff7eb70b2639c49f415cc3a SHA512 fd92b04d9f0dea988cc37864d947b0dbd646ed25315c99e0db69723b7bb912aede8e89c2d5bd06edc8fabc1e5e43a6306c9d8d22ce610359407c92dfedf094e2 WHIRLPOOL 035f57c9ce5ff99b46f1a5a1632a9f6f5088a1a41cf2e4f7800a73ccb7267ad268d1d1c98af2c3cede75d1363b1f2101c8132c7a55cd4c03d2316b2f93f48ad6
+DIST xfwm4-4.12.1.tar.bz2 1191438 SHA256 4e9b94517cc1550c4ff4ff8ac252c95ef0d3345b1f5f04dbf2ca9e3c708de1bb SHA512 0da6e7a124ff489e220bbf4088370d5724b71301fa2a07541dffc48233358a855b34fc4068dbb6dbf1df2eb8710dff1ed7fd9b4304884f36fc95b3e581bbe408 WHIRLPOOL ad34aeced495a5ee8d084236125c37c1efb0563788e27cc053d6d097b9f692050a3f8a0d9c599906e92287d9e6aa19af0ff29e0c314b111b8336a09a1aad0115
 EBUILD xfwm4-4.10.1.ebuild 1418 SHA256 881a317c4d00a4157b1308bd2e79652d6ebee430cbfd68e8d27c0bd71fb25db5 SHA512 73de378f563f6fe45350a70f9c3b731971b503e28664af020dcf8567bc5a2ba7c85e745fcbf0016395e7371b026768af976c2805d9829efacc25846981980b87 WHIRLPOOL dbd169bb3ea36dfe764b3257fba5bd96a9067f53b4da84f10fca87e265d27e7b75c3c0fa4067960358b0cbf53a4ffd2f370243951096477b00375772e7563e4a
 EBUILD xfwm4-4.11.2.ebuild 1497 SHA256 c488a5a93f75c06013c42c49691078120f82145f81ec9ac3f2c3879ee48de5db SHA512 f05da5ef06576c58aabccc513fbfc3c688e39d12d0e9d0a98e00bc6ceb173179fdfa3df22ae3d1d44c8f68e760f934b0a256ae7342ea64c71e166cdd67868836 WHIRLPOOL 3f0c4d959ed0af6b872fd09a05d172602cc03d94d7f1bc1fe3ae26320fb82252a87b6b17d32f35cb321f9f3b1cf4861d2f4f542a126e34349565983041313d1e
 EBUILD xfwm4-4.12.0.ebuild 1499 SHA256 e99639969fcc28bbc69d54aa228b97be6feb10cf72d08ed4d6bab7a1179d6af5 SHA512 5822bb2e0ccc5f9483aabdc020a98fc0c72d90a993d791d12f52567d0ced83324e55d41ba7c2dde551f93a79e2ad5a518110fe1e7384065a6c746892fe981dfe WHIRLPOOL 9c633e50d8725e0365eae13cdf240965243caa772ba9b6880edb6f5074bdb4de7d0cbb982b1d5b16bc771907d77de29ad67a6eb418b2fd23c61223fb93eae8eb
-MISC ChangeLog 25392 SHA256 4bc8a1fce69070ab1a1e98ce372a4d653e6dfd1bf4a9a70e69d9a667898c7d54 SHA512 1a431756f5d2886966cf76ceafc4bec6de5b7b1354ab7ddb0c6c62ad91e89be890e997555df0b90dee8ec596590ecfd4062908416ce4b809c3464be4ffdac928 WHIRLPOOL 7f8a89d7b357b0264429bbb729605e774c37fd5bfe0bd21a18c1a56187b3aa6de3f453a19d439d8892390bda2d89f51f0ecd9395819c38e7eec444f47521bbed
+EBUILD xfwm4-4.12.1.ebuild 1499 SHA256 c2e4f5867947316df2c9784597379e213415700bc2c372f82a8f5ec29234e7b8 SHA512 06c3b0b802a0b1be1343b1cd9533e822fb0bd7aac3fa5158c58cba74d25908a28404883d56759aeff63acc4cc414af0f04a15eb27b4a536dbe95943e441f7cb3 WHIRLPOOL ca4f06a939712c595c715efe932b0014abf1dcc034309704e1f9459ed4106d359a876d63abb4b78783cf5d760a8f434ab7fc0933ae6c2fd194439fe1d5c11478
+MISC ChangeLog 25526 SHA256 b4f203a3df10caa87d6448f9c1c2a295c30d25abeb6cbf91257e48c8c3b9927a SHA512 e2891a8cb0d6c54c19257f6be54b8f0d16aa86983da9915d42d6eb3a8974d233a3e8331a235c0379f67f478e1f4cb502d576be62dda44547fd2f953970b798dc WHIRLPOOL 47552f8a3a91d68b4e72f3e4e37101235238eff9338676ed5cc66d0927b718cbf7fa2e9eb5b1b52bc061c4f68b42d5d84d8747ebfafec1f5c42f4367ef9a5590
 MISC metadata.xml 157 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61 SHA512 54ff64307677bfe1e9b62d427e8aef8aaf32b86216858541398b5f21974247418eba7612f801ff2c333fe9a059d60e1f568046a3ac88e0ee2d59beb3a3a77148 WHIRLPOOL a42edf92b91b9922e7af397d6cbad72ba7e2ab7e5aaa4504cdd8bebdc1d87e9523e76c016eab474f4b65581a9cd58a3be13d8f52bf5ae7dc6afe96d428433a5e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU/GWIXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVBR93XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZODR8P/izSGycXVgm7aERoFRbiSsTz
-78STrqCzIPHZ7iXHKIn4YkrFzOIHM3dJysDLBYm6S8/wjE3tkyj3ozsDrFsZ4u+y
-dbheMR6rKjXJmxKh2kGyYajfQ7/zJOrLbkVredunv53bIvs/MJifJsHaRRx6qcdn
-Y0t6RbR1ytIwquCUdIN5tkMoPbYv+69jwjAxLoVMVli1NLzvgyOqJuRc2uS51+cu
-Jq0RUPocDAhy8tnwJaJKtq3jttB/Q5K0AR28Wiqzq3CdD0SJPM1HH0BWObtwxoa9
-Bg5P4o0AiZDWwtfYjmShFe2z6KAXOfTCeKTFmvlw1FyK/LmEErjT/ij+7kcGRb7g
-OfVxzgRFklsg9fsUTBf5H1a8mvZoSy0EbZvRahlLDVqgT/XQHMm0AEZz4eQWC67M
-zQCFcw9nbVBpTReA4aQsGn9vGXjo6uf2u2t1SL3mft/c+roxPsCHKLz690Jdt053
-G05gxtpkHUeViG/HzZY482HxJrwkk16iPcUHkAc3phDWcJrGVt6SbP8fH61370/A
-NINYtoRglIYgTRbNsyxrRV09Ifml/DO+KxsjHeuW13bvRY+FsZVzYRHSknGch8yh
-DpWtDHPdixrKvVHb6CGqo9Dkx3TKS5yG1PDehgO5aDqFdj7D0Ypu/W75Clr14IAR
-K4+8mWd2Pj+PTh8aXMxO
-=7x1t
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOyiAP/3jrvwCJls2fh48sZdBGLiR2
+NyGZjt8s16uYHMvHLI6sn9hqwo24VV964wudWno2fe7WTiTiPaNaGrSGaQOt7D3P
+Yq2HBd83+SFpu5TqlosV6DbWh+H3qdtBAJqo53FegiIfC9hvSJ+46deSo3WNNC/L
+wbcC10VB7ujzv6U8t5yCFaO4aR2VqERst1EioEnJ1AYk22JujhNERKwaKtdr8B7l
+881hf53rwGFb89qugLE0EQ76AOG+int/ipEGeQofqttJKJB5xT5z/EjQN5IGA2eU
+n7oMkEpN3nr9Qog8QyfNuPIHhaufRvjBStqsVNMNL4YUY+IXi0+4HYKlWVWMB8q7
+zIXTr0X39k0l/ug+DR5VF5dAd4vlbYZdJ5hFfKM8RyWpFii1a37f4uZbhP2ncvMW
+D3pq/5wbISRuV18ApFl9pE6oR7iz3xpohAkxTULkdgYEKtfJPsXKSkKnRn6mUoNM
+OpvvJEp1QiHxqzTqqipWzQYMeE7y/abkT0M0DlqLtm1AG1DRzFVxP+JzRWBDVPpC
+YqhdGtTO3m20xB3iGRSwbYQCW2MVpcqXHLmSW5q8qPskORNnUkpdPO20UamvBD7Q
+ab3ViV2PPsjbiLNoVLdXaY/UBJbCyz6oKTarXMt6y00hvKrwqqWqBH8uuDcUBg7g
+RB99Mp1QVejC8vSvAHak
+=ZEPT
 -----END PGP SIGNATURE-----
