@@ -1,6 +1,11 @@
 # ChangeLog for xfce-base/xfwm4
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.230 2015/03/08 15:06:39 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfwm4/ChangeLog,v 1.231 2015/03/15 05:58:10 mgorny Exp $
+
+*xfwm4-4.12.1 (15 Mar 2015)
+
+  15 Mar 2015; Michał Górny <mgorny@gentoo.org> +xfwm4-4.12.1.ebuild:
+  Version bump with some fixes.
 
 *xfwm4-4.12.0 (08 Mar 2015)
 
